--- a/lume_sales/views/sale.xml
+++ b/lume_sales/views/sale.xml
@@ -91,7 +91,7 @@
                         <field name="invoice_status" invisible="1"/>
                         <field name="qty_invoiced" invisible="1"/>
                         <!-- Visible fields -->
-                        <field name="category_id"/>
+                        <field name="product_categ_id"/>
                         <field name="product_id"/>
                         <field name="lot_id" string="Metrc #"/>
                         <!-- <field name="thc_type" string="Type"/> -->
