--- a/lume_sales/views/sale.xml
+++ b/lume_sales/views/sale.xml
@@ -90,6 +90,7 @@
                         <field name="display_type" invisible="1"/>
                         <field name="invoice_status" invisible="1"/>
                         <field name="qty_invoiced" invisible="1"/>
+                        <field name="product_uom" invisible="1"/>
                         <!-- Visible fields -->
                         <field name="product_categ_id"/>
                         <field name="product_id"/>
