--- a/lume_sales/views/settings.xml
+++ b/lume_sales/views/settings.xml
@@ -9,11 +9,13 @@
             <field name="arch" type="xml">
                 <xpath expr="//div[hasclass('settings')]" position="inside">
                     <div class="app_settings_block" data-string="Lume" string="Lume" data-key="lume_sales">
-                        <h2 id="lume_pos">Lume POS</h2>
-                        <div class="row mt16 o_settings_container">
-                            <div class="o_setting_left_pane">
-                                <label for="batch_threshold" string="Inventory Batch Threshold"/>
-                                <field name="batch_threshold"></field>
+                        <div id="lume_pos">
+                            <h2>Lume POS</h2>
+                            <div class="row mt16 o_settings_container">
+                                <div class="o_setting_left_pane">
+                                    <label for="batch_threshold" string="Inventory Batch Threshold"/>
+                                    <field name="batch_threshold"></field>
+                                </div>
                             </div>
                         </div>
                     </div>
