--- a/lume_sales/views/sale.xml
+++ b/lume_sales/views/sale.xml
@@ -30,12 +30,12 @@
                         <b>Delivery Address</b>
                     </span>
                     <div class="o_address_format" attrs="{'invisible': [('fulfillment_type', '!=', 'delivery')]}">
-                        <field name="street" placeholder="Street..." class="o_address_street" attrs="{'readonly': [('state', '=', 'done')]}"/>
-                        <field name="street2" placeholder="Street 2..." class="o_address_street" attrs="{'readonly': [('state', '=', 'done')]}"/>
-                        <field name="city" placeholder="City" class="o_address_city" attrs="{'readonly': [('state', '=', 'done')]}"/>
-                        <field name="state_id" class="o_address_state" placeholder="State" options="{'no_open': True, 'no_quick_create': True}" attrs="{'readonly': [('state', '=', 'done')]}" context="{'country_id': country_id, 'default_country_id': country_id, 'zip': zip}"/>
-                        <field name="zip" placeholder="ZIP" class="o_address_zip" attrs="{'readonly': [('state', '=', 'done')]}"/>
-                        <field name="country_id" placeholder="Country" class="o_address_country" options="{&quot;no_open&quot;: True, &quot;no_create&quot;: True}" attrs="{'readonly': [('state', '=', 'done')]}"/>
+                        <field name="street" placeholder="Street..." class="o_address_street" attrs="{'readonly': [('state', '=', 'done')],'required':[('fulfillment_type','=','delivery')]}"/>
+                        <field name="street2" placeholder="Street 2..." class="o_address_street" attrs="{'readonly': [('state', '=', 'done')],'required':[('fulfillment_type','=','delivery')]}"/>
+                        <field name="city" placeholder="City" class="o_address_city" attrs="{'readonly': [('state', '=', 'done')],'required':[('fulfillment_type','=','delivery')]}"/>
+                        <field name="state_id" class="o_address_state" placeholder="State" options="{'no_open': True, 'no_quick_create': True}" attrs="{'readonly': [('state', '=', 'done')],'required':[('fulfillment_type','=','delivery')]}" context="{'country_id': country_id, 'default_country_id': country_id, 'zip': zip}"/>
+                        <field name="zip" placeholder="ZIP" class="o_address_zip" attrs="{'readonly': [('state', '=', 'done')],'required':[('fulfillment_type','=','delivery')]}"/>
+                        <field name="country_id" placeholder="Country" class="o_address_country" options="{&quot;no_open&quot;: True, &quot;no_create&quot;: True}" attrs="{'readonly': [('state', '=', 'done')],'required':[('fulfillment_type','=','delivery')]}"/>
                     </div>
                 </field>
                 <!-- Custom Add Product Button -->
