--- a/lume_sales/views/sale.xml
+++ b/lume_sales/views/sale.xml
@@ -141,6 +141,9 @@
                     <field name="threshold3" invisible="1"/>
                     <field name="timer_start" widget="so_timer" attrs="{'invisible':[('state', '!=', 'draft')]}"/>
                 </field>
+                <xpath expr="//header/button[@name='action_cancel']" position="before">
+                    <button name="create_return" type="object" class="btn btn-secondary" attrs="{'invisible':[('state', '!=', 'done')]}">Return</button>
+                </xpath>
                 <!-- Tax explanation -->
                 <field name="amount_untaxed" position="after">
                     <field name="amount_by_group" widget="tax-group-custom-field" nolabel="1" colspan="2" attrs="{'invisible': [('amount_tax', '=', 0)]}"/>
