--- a/lume_sales/views/sale.xml
+++ b/lume_sales/views/sale.xml
@@ -111,7 +111,7 @@
                     <attribute name="attrs">{'invisible': [('state', 'in', ['sale','done','cancel'])]}</attribute>
                 </xpath>
                 <xpath expr="//header/button[@name='action_cancel']" position="before">
-                    <button name="create_return" type="object" class="btn btn-secondary" attrs="{'invisible':[('state', '!=', 'done')]}">Return</button>
+                    <button name="create_return" type="object" string="Return" class="btn btn-secondary" attrs="{'invisible':[('state', '!=', 'done')]}">Return</button>
                 </xpath>
                 <xpath expr="//header/button[@name='action_cancel']" position="attributes">
                     <attribute name="string">Abandon Cart</attribute>
