--- a/lume_sales/views/returns.xml
+++ b/lume_sales/views/returns.xml
@@ -28,7 +28,7 @@
                                         <field name="original_qty" readonly="1"/>
                                         <field name="return_qty"/>
                                         <field name="price" readonly="1"/>
-                                        <field name="reason_code"/>
+                                        <field name="reason_code" required="1"/>
                                         <field name="total_price" readonly="1"/>
                                     </tree>
                                 </field>
