--- a/lume_sales/views/partner.xml
+++ b/lume_sales/views/partner.xml
@@ -145,6 +145,12 @@
             <b>Address</b>
           </span>
         </xpath>
+        <field name="name" position="replace">
+          <field name="name" invisible="1"/>
+          <field name="first_name" required="1"/>
+          <field name="middle_name" required="1"/>
+          <field name="last_name" required="1"/>
+        </field>
       </field>
     </record>
 
