--- a/lume_sales/views/sale.xml
+++ b/lume_sales/views/sale.xml
@@ -20,7 +20,7 @@
                     <button class="oe_stat_button" type="object" name="open_order_history" icon="fa-usd" modifiers="{}" options="{}" attrs="{'invisible': [('partner_sale_order_count', '=', False)]}">
                         <field string="Order History" name="partner_sale_order_count" widget="statinfo" modifiers="{'readonly':true}" id="sale_order_count" />
                     </button>
-                    <button class="oe_stat_button" type="object" name="open_returns" icon="fa-usd" modifiers="{}" options="{}" attrs="{'invisible': [('return_count', '=', False)]}">
+                    <button class="oe_stat_button" type="object" name="open_returns" icon="fa-usd" modifiers="{}" options="{}" attrs="{'invisible': [('return_count', 'in', [0,False])]}">
                         <field string="Returns" name="return_count" widget="statinfo" modifiers="{'readonly':true}" id="return_count" />
                     </button>
                 </xpath>
