--- a/lume_sales/views/project.xml
+++ b/lume_sales/views/project.xml
@@ -18,6 +18,7 @@
             <field name="blink_threshold"/>
             <field name="caregiver_id"/>
             <field name="stage_name"/>
+            <field name="is_checked_in"/>
           </xpath>
           <!-- Reorganize title of task -->
           <xpath expr="//strong[@class='o_kanban_record_title']" position="replace">
@@ -37,6 +38,9 @@
                 <field name="partner_id" widget="link_many2one"/>
             </span>
             <strong><field name="monetary_display"/></strong>
+            <t t-if="record.is_checked_in &amp;&amp; record.fulfillment_type == 'online'">
+              <span class="fa fa-check-square-o" style="color:green;"></span>
+            </t>
           </xpath>
           <!-- Delete the else tag from the if we replaced above -->
           <xpath expr="//div[@class='o_kanban_record_headings']/*[5]" position="replace">
