--- a/lume_sales/views/partner.xml
+++ b/lume_sales/views/partner.xml
@@ -7,6 +7,7 @@
       <field name="arch" type="xml">
         <xpath expr="//form//sheet" position="before">
           <header>
+            <field name="has_online_order" invisible="1"/>
             <!-- <button name="%(scan_dl_wizard)d" string="Scan DL" type="action" class="btn-primary"/> -->
             <button name="check_in" string="Check In" type="object" class="btn-primary" invisible="not context.get('check_in_window',False) or context.get('has_caregiver',False)" />
             <button name="check_in_as_patient" string="Check In Patient" type="object" class="btn-primary" invisible="not (context.get('check_in_window',False) and context.get('has_caregiver',False))" />
