--- a/lume_sales/views/sale.xml
+++ b/lume_sales/views/sale.xml
@@ -20,9 +20,9 @@
                     <button class="oe_stat_button" type="object" name="open_order_history" icon="fa-usd" modifiers="{}" options="{}" attrs="{'invisible': [('partner_sale_order_count', '=', False)]}">
                         <field string="Order History" name="partner_sale_order_count" widget="statinfo" modifiers="{'readonly':true}" id="sale_order_count" />
                     </button>
-                    <button class="oe_stat_button" type="object" name="open_returns" icon="fa-usd" modifiers="{}" options="{}" attrs="{'invisible': [('return_count', 'in', [0,False])]}">
+                    <!-- <button class="oe_stat_button" type="object" name="open_returns" icon="fa-usd" modifiers="{}" options="{}" attrs="{'invisible': [('return_count', 'in', [0,False])]}">
                         <field string="Returns" name="return_count" widget="statinfo" modifiers="{'readonly':true}" id="return_count" />
-                    </button>
+                    </button> -->
                 </xpath>
                 <field name="partner_id" position="after">
                     <field name="order_type" readonly="1" invisible="1" />
