--- a/lume_sales/views/quant.xml
+++ b/lume_sales/views/quant.xml
@@ -6,7 +6,7 @@
         <field name="inherit_id" ref="stock.view_stock_quant_tree_editable"/>
         <field name="arch" type="xml">
             <field name="location_id" position="after">
-                <field name="tier" attrs="{'invisible':[('product_id.is_tiered','=',False)],'required':[('product_id.is_tiered','=',True)]}"/>
+                <field name="tier" attrs="{'invisible':[('is_tiered','=',False)],'required':[('is_tiered','=',True)]}"/>
             </field>
         </field>
     </record>
